--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     </style>
 </head>
 <body>
-<div class="test_class">test_page
+<div class="test_class">test_page IDEA
     <script src="hello.js"></script>
+    <script>document.write(max(2000, 2018))</script>
     <script>document.write(max(2000, 2018))</script>
 </div>
 </body>
