--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-<div class="test_class">test_page
+<div class="test_class">hello world
     <script src="hello.js"></script>
     <script>document.write(max(2000, 2018))</script>
 </div>
